--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fs-app-template",
+  "name": "givEth",
   "version": "2.0.0",
   "description": "Some boilerplate code to get you started - get shakin'!",
   "main": "index.js",
@@ -28,7 +28,8 @@
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.9.1",
     "pg": "^8.5.1",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "web3": "^1.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
