--- a/package.json
+++ b/package.json
@@ -20,20 +20,23 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
-    "axios": "^0.21.1",
-    "bcrypt": "^5.0.0",
+    "@material-ui/core": "^4.12.3",
+    "@material/select": "^12.0.0",
+    "babel": "^6.23.0",
+    "bcrypt": "^5.0.1",
     "compression": "^1.7.3",
-    "express": "^4.16.4",
+    "express": "^4.17.1",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
     "material-ui": "^0.20.2",
-    "morgan": "^1.9.1",
-    "pg": "^8.5.1",
-    "sequelize": "^6.3.5",
+    "morgan": "^1.10.0",
+    "pg": "^8.7.1",
+    "prettier": "^2.3.2",
+    "sequelize": "^6.6.5",
     "web3": "^1.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.15.0",
     "@babel/preset-react": "^7.12.10",
     "@babel/register": "^7.12.10",
     "axios": "^0.21.1",
@@ -56,7 +59,7 @@
     "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
     "supertest": "^4.0.2",
-    "webpack": "^5.15.0",
-    "webpack-cli": "^4.3.1"
+    "webpack": "^5.51.1",
+    "webpack-cli": "^4.8.0"
   }
 }
