--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material/select": "^12.0.0",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "babel": "^6.23.0",
     "bcrypt": "^5.0.1",
     "compression": "^1.7.3",
