--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "express": "^4.17.1",
     "history": "^4.9.0",
     "jsonwebtoken": "^8.5.1",
-    "material-ui": "^0.20.0",
+    "material-ui": "^0.20.2",
     "morgan": "^1.10.0",
     "pg": "^8.7.1",
     "prettier": "^2.3.2",
     "sequelize": "^6.6.5",
+    "url-loader": "^4.1.1",
     "web3": "^1.5.2"
   },
   "devDependencies": {
