--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "jsonwebtoken": "^8.5.1",
     "material-ui": "^0.20.0",
     "morgan": "^1.10.0",
+    "node-polyfill-webpack-plugin": "^1.1.4",
     "pg": "^8.7.1",
     "prettier": "^2.3.2",
     "sequelize": "^6.6.5",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "web3": "^1.5.2"
   },
   "devDependencies": {
