--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "givEth",
   "version": "2.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "An anonymous, Ethereum-based donation web application",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
